[package]
name = "parry2d-f64"
version = "0.25.3"
authors = ["Sébastien Crozet <developer@crozet.re>"]

description = "2 dimensional collision detection library in Rust. 64-bit precision version."
documentation = "https://parry.rs/docs"
homepage = "https://parry.rs"
repository = "https://github.com/dimforge/parry"
readme = "README.md"
keywords = ["collision", "geometry", "distance", "ray", "convex"]
categories = ["science", "game-development", "mathematics", "wasm"]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lints]
workspace = true

[features]
default = ["required-features", "std", "spade"]
required-features = ["dim2", "f64"]
std = [
    "nalgebra/std",
    "slab",
    "simba/std",
    "arrayvec/std",
    "spade",
    "thiserror/std",
    "ena",
    "spade?/std",
]
dim2 = []
f64 = []
serde-serialize = [
    "serde",
    "serde_arrays",
    "nalgebra/serde-serialize",
    "arrayvec/serde",
    "bitflags/serde",
    "hashbrown?/serde",
    "spade?/serde",
]
rkyv-serialize = [
    "rkyv/validation",
    "nalgebra/rkyv-serialize",
    "simba/rkyv-serialize",
]
bytemuck-serialize = ["bytemuck", "nalgebra/convert-bytemuck"]
simd-stable = ["simba/wide", "simd-is-enabled"]
simd-nightly = ["simba/portable_simd", "simd-is-enabled"]
enhanced-determinism = ["simba/libm_force", "indexmap"]
parallel = ["rayon"]
alloc = ["nalgebra/alloc", "hashbrown"]
spade = ["dep:spade", "alloc"]
improved_fixed_point_support = []

# Do not enable this feature directly. It is automatically
# enabled with the "simd-stable" or "simd-nightly" feature.
simd-is-enabled = []

[lib]
name = "parry2d_f64"
path = "../../src/lib.rs"
required-features = ["required-features"]

[dependencies]
either = { version = "1", default-features = false }
bitflags = "2.3"
downcast-rs = { version = "2", default-features = false, features = ["sync"] }
num-traits = { version = "0.2", default-features = false }
slab = { version = "0.4", optional = true }
arrayvec = { version = "0.7", default-features = false }
simba = { version = "0.9", default-features = false }
nalgebra = { version = "0.34", default-features = false, features = ["libm", "macros"] }
approx = { version = "0.5", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_arrays = { version = "0.2", optional = true }
rkyv = { version = "0.7.41", optional = true }
num-derive = "0.4"
indexmap = { version = "2", features = ["serde"], optional = true }
hashbrown = { version = "0.16", optional = true, default-features = false, features = [
    "default-hasher",
] }
spade = { version = "2", optional = true, default-features = false }
rayon = { version = "1", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
log = "0.4"
ordered-float = { version = "5", default-features = false }
thiserror = { version = "2", default-features = false }
ena = { version = "0.14.3", optional = true, default-features = false }
smallvec = "1"
foldhash = { version = "0.2", default-features = false }

[dev-dependencies]
simba = { version = "0.9", default-features = false }
oorandom = "11"
ptree = "0.4.0"
rand = { version = "0.9" }
